--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
   <!-- Custom styles for this template -->
   <link href="css/one-page-wonder.min.css" rel="stylesheet">
 
+  <script>
+
+  window.alert('Welcome!');
+
+  </script>
+
+
 </head>
 
 <body>
